--- a/frontend/crud-client/src/app/app.component.html
+++ b/frontend/crud-client/src/app/app.component.html
@@ -21,6 +21,7 @@
   <h1>
     Projeto Crud de Pessoa!
   </h1>
+  <a class="btn btn-primary btn-primary" href="/pesquisar-pessoa">Cadastro</a>
 </div>
 <router-outlet></router-outlet>
 
